# race-day-sim

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
db/migrations/: V001__sim_candidates.sql
docs/: completion-plan.md  confidence-weighted-rating.md  cross-repo-audit-2026-05-27.md  edge-calibration-issue.md  exotic-overlay-poc-2026-05-29.md  flb-calibration-poc-2026-05-29.md  hierarchical-ability-poc-2026-05-29.md  itp-principles.md  itp-wagering-framework.md  rating-calibration-plan.md  rebuild-plan.md  research-findings.md  research-plan.md  simulation-protocol.md  wagering-framework.md
models/: flb_calibration.json
notebooklm/: audio-overview-prompt.md  broadcast-style-guide.md  card-analysis-gp-2014-09-06.md  custom-role.md  episode-prompt-gp-2014-09-06.md  itp-principles.md  prompt-short.md  prompt.md  video-custom-style.md  video-overview-prompt.md  visual-overlays-gp-2014-09-06.md
scripts/: golden_test_market_bias.py  pick_sim_day.py  profile_sim_day.py  run_batch.py  run_simulation.py  simulate_race_day.py
scripts/poc/exotic-overlay/: 01_data_inventory.py  02_bet_everything_baseline.py  03a_vertical_overlay.py  04_honest_overlay_per_year.py  audit_horizontal_parity.py  audit_poc_vs_prod.py  audit_superfecta_2014.py  (+4 more)
src/sim/: blinder.py  db.py  evaluate.py  flb.py  horizontal.py  kelly.py  lengths.py  pace.py  payoff.py  probability.py  ratings.py
tests/: test_bias_multiplier.py
tmp/: batch_full_2_smoke-full.json  batch_opinion_2_smoke-opinion.json  batch_win_3_smoke.json  batch_win_50_FLB-batch-A-2026-05-29.json  batch_win_5_smoke.json
(+21 files in other folders)
