[project]
name = "race-day-sim"
version = "0.1.0"
description = "Blinded race day simulation — Benter probability engine + Kelly staking + post-race evaluation"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sim"]

[tool.ruff]
line-length = 100
